--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            position: relative;
         }
 
         #controls {
@@ -121,14 +122,72 @@
             margin-left: 10px;
         }
 
-        #credit {
-            margin-top: 20px;
-            font-size: 1em;
-            color: #aaa;
+        #about-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #555;
+            color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #about-modal {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #222;
+            color: #fff;
+            padding: 20px;
+            border: 1px solid #444;
+            border-radius: 10px;
+            z-index: 1000;
+        }
+
+        #about-modal h2 {
+            margin-top: 0;
+        }
+
+        #about-modal a {
+            color: lightblue;
+        }
+
+        #about-modal button {
+            margin-top: 10px;
+            padding: 5px 10px;
+            background-color: #555;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        #about-modal button:hover {
+            background-color: #777;
         }
     </style>
 </head>
 <body>
+    <button id="about-button">About</button>
+    <div id="about-modal">
+        <h2>About This Project</h2>
+        <p>This drum machine was created by Zaher Alkaei. It is built using HTML, CSS, and JavaScript, using the Tone.js library for sound synthesis and sequencing.</p>
+        <p><strong>How to Use:</strong></p>
+        <ul>
+            <li>Select the rhythm length from the dropdown menu.</li>
+            <li>Click on the pads to activate/deactivate the sounds.</li>
+            <li>Use the sliders to adjust tempo and volume.</li>
+            <li>Select preset rhythms from the dropdown menu to load different styles.</li>
+            <li>Use the play/stop button to start or stop the rhythm.</li>
+            <li>Toggle effects like Reverb and Distortion using the effect buttons.</li>
+        </ul>
+        <p><strong>Browser Recommendations:</strong> This drum machine works best on modern browsers like Chrome, Firefox, and Edge.</p>
+        <p>Check out the source code on <a href="https://github.com/zaheralkaei/DrumMachine" target="_blank">GitHub</a>.</p>
+        <button id="close-about">Close</button>
+    </div>
     <h1>Drum Machine by <a href="https://github.com/zaheralkaei" target="_blank" style="color: lightblue;">Zaher Alkaei</a></h1>
     <div id="controls">
         <label for="length">Rhythm Length:</label>
@@ -142,6 +201,12 @@
             <option value="8">8</option>
             <option value="9">9</option>
             <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
         </select>
         <button id="play-stop">Play</button>
         <div class="slider">
@@ -187,7 +252,7 @@
     </div>
     <div id="effects">
         <button id="reverb-button" class="effect-button">Reverb</button>
-        <button id="deeper-sound-button" class="effect-button">Deeper Sound</button>
+        <button id="distortion-button" class="effect-button">Distortion</button>
     </div>
     <div id="drum-pads">
         <!-- Drum pads will be generated here by JavaScript -->
@@ -195,7 +260,6 @@
     <div class="progress-row" id="progress-row">
         <!-- Progress steps will be generated here by JavaScript -->
     </div>
-    <div id="credit"><a href="https://github.com/zaheralkaei" target="_blank" style="color: lightblue;">Zaher Alkaei</a></div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // Grab references to the DOM elements
@@ -208,7 +272,10 @@
             const drumPadsContainer = document.getElementById('drum-pads');
             const progressRow = document.getElementById('progress-row');
             const reverbButton = document.getElementById('reverb-button');
-            const deeperSoundButton = document.getElementById('deeper-sound-button');
+            const distortionButton = document.getElementById('distortion-button');
+            const aboutButton = document.getElementById('about-button');
+            const aboutModal = document.getElementById('about-modal');
+            const closeAboutButton = document.getElementById('close-about');
 
             // Define the sounds to be used and the initial state
             const sounds = ['hihat', 'snare', 'kick'];
@@ -217,23 +284,20 @@
 
             // Initialize effects and connect them
             const reverb = new Tone.Reverb(2).toDestination();
-            const pitchShift = new Tone.PitchShift(-12).toDestination();
+            const distortion = new Tone.Distortion(0.4).toDestination();
             const effectChain = new Tone.Gain().connect(Tone.Destination);
 
             // Initialize the synths and connect them to the effect chain
             const synths = {
-                kick: new Tone.MembraneSynth().connect(effectChain),
-                hihat: new Tone.MetalSynth({
-                    frequency: 200,
-                    envelope: {
-                        attack: 0.001,
-                        decay: 0.1,
-                        release: 0.01
+                kick: new Tone.Sampler({
+                    urls: {
+                        C1: "https://cdn.jsdelivr.net/gh/Tonejs/Tone.js/examples/audio/505/kick.mp3",
                     },
-                    harmonicity: 5.1,
-                    modulationIndex: 32,
-                    resonance: 4000,
-                    octaves: 1.5
+                }).connect(effectChain),
+                hihat: new Tone.Sampler({
+                    urls: {
+                        C3: "https://cdn.jsdelivr.net/gh/Tonejs/Tone.js/examples/audio/505/hh.mp3",
+                    },
                 }).connect(effectChain),
                 snare: new Tone.Sampler({
                     urls: {
@@ -580,14 +644,14 @@
             }
 
             let isReverbActive = false;
-            let isDeeperSoundActive = false;
+            let isDistortionActive = false;
 
             reverbButton.addEventListener('click', () => {
                 isReverbActive = toggleEffect(reverbButton, reverb, isReverbActive);
             });
 
-            deeperSoundButton.addEventListener('click', () => {
-                isDeeperSoundActive = toggleEffect(deeperSoundButton, pitchShift, isDeeperSoundActive);
+            distortionButton.addEventListener('click', () => {
+                isDistortionActive = toggleEffect(distortionButton, distortion, isDistortionActive);
             });
 
             // Event listeners for user interactions
@@ -609,6 +673,15 @@
                 if (e.target.value !== 'custom') {
                     loadPreset(e.target.value);
                 }
+            });
+
+            // About button functionality
+            aboutButton.addEventListener('click', () => {
+                aboutModal.style.display = 'block';
+            });
+
+            closeAboutButton.addEventListener('click', () => {
+                aboutModal.style.display = 'none';
             });
 
             // Initialize the drum machine with default settings
